--- a/public/assets/stylesheets/custom.css
+++ b/public/assets/stylesheets/custom.css
@@ -386,6 +386,36 @@ max-width: 100%;
     margin-bottom: 5px;
 }
 
+.device-subdevices .subdevice-thumbnail {
+    width: 250px;
+}
+.device-subdevices .subdevice-thumbnail .subdevice-icon {
+    height:125px;
+    background-image: url('/assets/images/robots/robot2.png');
+    background-size:contain;
+    background-repeat:no-repeat;
+    background-position:center;
+    margin: 15px 0;
+}
+
+.device-subdevices .subdevice-thumbnail .subdevice-icon.subdevice-icon-skynet-arduino{
+    background-image: url('http://www.unwinnable.com/wp-content/uploads/2010/12/Arduino-logo.png');
+}
+.device-subdevices .subdevice-thumbnail .subdevice-icon.subdevice-icon-skynet-hue{
+    background-image: url('http://dc942d419843af05523b-ff74ae13537a01be6cfec5927837dcfe.r14.cf1.rackcdn.com/wp-content/uploads/Philips-Hue-Logo-125x125.png');
+}
+.device-subdevices .subdevice-thumbnail .subdevice-icon.subdevice-icon-skynet-wemo{
+    background-image: url('http://store.linksys.com/moduleimages/163/WeMo_AppLogo.jpg');
+}
+
+.devices .device-thumbnail {
+    height: 380px;
+}
+.devices .device-thumbnail .panel-heading {
+    height: 6em;
+    overflow:hidden;
+}
+
 .device-list .device-actions {
     margin-bottom: 35px;
 }
@@ -405,3 +435,16 @@ max-width: 100%;
     border-bottom: 1px solid darkgray;
     color : darkgray;
 }
+
+.device-list .panel-body .device-image-container {
+    padding:2em 0 2em 0;
+    height: 16em;
+    width : inherit;
+    margin-left: 25%;
+    margin-right: 25%;
+}
+.device-list .panel-body .device-image-container > .device-image {
+}
+
+
+
